# CrabMC

./: Cargo.toml  README.md  deny.toml  how_it_work.md  licenses.tsv
.github/workflows/: nightly.yml  rust-CI.yml  rust-check.yml  rust.yml
doc/: how_it_work.md
src/: eula.rs  main.rs  minecraft_server.rs  server_properties.rs
src/auth/: mod.rs
src/dedicated/: dedicated_server.rs  mod.rs
src/math/: mod.rs  var_int_and_long.rs
src/network/: mod.rs  packet_handler.rs  server_connection_listener.rs
src/util/: chrono.rs  crypt.rs  logger.rs  mod.rs  modules_handler.rs  update.rs
