[package]
name = "CrabMC"
license = "MPL-2.0"
version = "0.0.2-proto"
edition = "2021"
authors = ["Looobay"]
description = "CrabMC ~ A rusty minecraft server"
repository = "https://github.com/Looobay/CrabMC"

[profile.release]
opt-level = "z" # z = max opti
lto = true      # Link Time Optimization

[dependencies]
chrono = "0.4.38"       # Time
clap = "4.5.16"         # Command Line
log = "0.4.1"           # Logs
rand = "0.8.5"          # Random
tiny_http = "0.12.0"    # HTTP
colored = "2.1.0"       # Colored logs
fern = "0.6.2"          # Save logs
native-dialog = "0.7.0" # Info box
